
  2017-08-11: Joel Cunningham
  * lwip_itoa: fix converting the number 0 (previously converted to '\0') (bug #51729)

  2017-08-08: Dirk Ziegelmeier
  * ip4_route_src: parameter order is reversed: ip4_route_src(dest, src) -> ip4_route_src(src, dest)
    to make parameter order consistent with other ip*_route*() functions
    Same also applies to LWIP_HOOK_IP4_ROUTE_SRC() parameter order.

  2017-07-26: Simon Goldschmidt
  * snmp_msg.c: fix bug #51578 (SNMP failed to decode some values on non 32bit platforms)

  2017-07-20: Simon Goldschmidt
  * compatibility headers: moved from 'src/include/posix' to 'src/include/compat/posix',
    'src/include/compat/stdc' etc.

  2017-05-09: Joel Cunningham
  * tcp: add zero-window probe timeout (bug #50837)

  2017-04-11: Simon Goldschmidt
  * sockets.c: task #14420 (Remove sys_sem_signal from inside SYS_ARCH_PROTECT
    crit section) done for LWIP_TCPIP_CORE_LOCKING==1

  2017-03-08: Joel Cunningham
  * tcp: initialize ssthresh to TCP_SND_BUF (bug #50476)

  2017-03-01: Simon Goldschmidt
  * httpd: LWIP_HTTPD_POST_MANUAL_WND: fixed double-free when httpd_post_data_recved
    is called nested from httpd_post_receive_data() (bug #50424)

  2017-02-28: David van Moolenbroek/Simon Goldschmidt
  * tcp: fixed bug #50418: LWIP_EVENT_API: fix invalid calbacks for SYN_RCVD pcb

  2017-02-24: Simon Goldschmidt
  * sockets.c: fixed close race conditions in lwip_select (for LWIP_NETCONN_FULLDUPLEX)

  2017-02-24: Simon Goldschmidt
  * sockets.c: fixed that select ignored invalid/not open sockets in the fd_sets (bug #50392)

  2017-02-16: Simon Goldschmidt
  * LWIP_NETCONN_FULLDUPLEX: fixed shutdown during write (bug #50274)

  2017-01-18: Dirk Ziegelmeier
  * Fix zero-copy RX, see bug bug #50064. PBUF_REFs were not supported as ARP requests.

  2017-01-11: David van Moolenbroek
  * Lots of IPv6 related fixes and improvements

(STABLE-2.0.1)
 
  ++ New features:

  2016-12-31: Simon Goldschmidt